added meta desc, keywords and author

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="Riley Marcum" content="Name of author" />
+    <meta name="description" content="Information about the coffee shop." />
+    <meta name="keywords" content="coffee, shop, cafe" />
+    <meta name="author" content="Riley Marcum" />
     <title>Coffee Shop</title>
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
