--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="page">
       <header class="header"></header>
       <main class="content">
+        <p>hello</p>
         <section class="recipes"></section>
         <section class="reservation"></section>
         <section class="menu"></section>
