--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
               <a class="nav__link" href="#recipes">Recipes</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Book a table</a>
+              <a class="nav__link" href="#booking">Book a table</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Menu</a>
+              <a class="nav__link" href="#menu">Menu</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Contacts</a>
+              <a class="nav__link" href="#contacts">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -75,7 +75,7 @@
           <div class="recipes__videos">
             <div class="recipes__videos-section">
               <iframe
-                class="recipes__video"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=twUWxxGNbB-S5Rzx"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -88,7 +88,7 @@
             </div>
             <div class="recipes__videos-section">
               <iframe
-                class="recipes__video"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=No_YoDJz7BXEZIng"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -101,9 +101,9 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section class="reservation" id="booking"></section>
+        <section class="menu" id="menu"></section>
+        <section class="about" id="contacts"></section>
       </main>
       <footer class="footer"></footer>
     </div>
