--- a/index.html
+++ b/index.html
@@ -101,7 +101,61 @@
             </div>
           </div>
         </section>
-        <section class="reservation" id="booking"></section>
+        <section class="reservation" id="booking">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="form reservation__form">
+            <fieldset class="form__fieldset">
+              <label for="name" class="form form__label">Name *</label>
+              <input
+                id="name"
+                type="text"
+                class="form form__input"
+                placeholder="Name Surname"
+                required
+              />
+              <label for="guests" class="form form__label"
+                >Number of guests *</label
+              >
+              <input
+                id="guests"
+                type="number"
+                class="form form__input"
+                placeholder="1-8"
+                min="1"
+                max="8"
+                required
+              />
+              <label for="date" class="form form__label">Date & time *</label>
+              <input
+                id="date"
+                type="datetime-local"
+                class="form form__input"
+                required
+              />
+              <label for="email" class="form form__label">Your email *</label>
+              <input
+                id="email"
+                type="email"
+                class="form form__input"
+                placeholder="email@email.com"
+                required
+              />
+              <button type="submit" class="form form__button">
+                Book a table
+              </button>
+              <div class="form form__terms">
+                <input
+                  type="checkbox"
+                  id="terms-checkbox"
+                  class="form__checkbox"
+                />
+                <label for="terms-checkbox" class="form form__checkbox-text"
+                  >I agree with the terms of use</label
+                >
+              </div>
+            </fieldset>
+          </form>
+        </section>
         <section class="menu" id="menu"></section>
         <section class="about" id="contacts"></section>
       </main>
