--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="nav">
           <img
             class="nav__logo"
-            src="/images/logo_coffeeshop_dark.svg"
+            src="./images/logo_coffeeshop_dark.svg"
             alt="logo"
           />
           <ul class="nav__links">
@@ -41,8 +41,8 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          Specialty coffee
-          <span class="header__span-accent"> in the Triple Peaks Library</span>
+          <span class="header__span-accent">Specialty coffee</span>
+          in the Triple Peaks Library
         </h1>
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
@@ -71,8 +71,8 @@
             Check out some recipes we've collected for your home-brewing
             convenience:
           </p>
-          <div class="recipes__videos">
-            <div class="recipes__videos-section">
+          <ul class="recipes__videos">
+            <li class="recipes__videos-section">
               <iframe
                 class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=twUWxxGNbB-S5Rzx"
@@ -80,12 +80,12 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
               ></iframe>
-              <div class="recipes__video-captions">
-                <p class="recipes__video-caption">Aeropress recipe</p>
-                <p class="recipes__video-caption">~5 min</p>
-              </div>
-            </div>
-            <div class="recipes__videos-section">
+              <p class="recipes__video-captions">
+                <span class="recipes__video-caption">Aeropress recipe</span>
+                <span class="recipes__video-caption">~5 min</span>
+              </p>
+            </li>
+            <li class="recipes__videos-section">
               <iframe
                 class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=No_YoDJz7BXEZIng"
@@ -93,22 +93,22 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
               ></iframe>
-              <div class="recipes__video-captions">
-                <p class="recipes__video-caption">French press recipe</p>
-                <p class="recipes__video-caption">~15 min</p>
-              </div>
-            </div>
-          </div>
+              <p class="recipes__video-captions">
+                <span class="recipes__video-caption">French press recipe</span>
+                <span class="recipes__video-caption">~15 min</span>
+              </p>
+            </li>
+          </ul>
         </section>
         <section class="reservation" id="booking">
           <h2 class="reservation__title">Book a table</h2>
           <form class="form reservation__form">
             <fieldset class="form__fieldset">
-              <label for="name" class="form form__label">Name *</label>
+              <label for="name" class="form__label">Name *</label>
               <input
                 id="name"
                 type="text"
-                class="form form__input"
+                class="form__input"
                 placeholder="Name Surname"
                 required
               />
@@ -139,16 +139,16 @@
                 placeholder="email@email.com"
                 required
               />
-              <button type="submit" class="form form__button">
+              <button type="submit" class="form__button">
                 Book a table
               </button>
-              <div class="form form__terms">
+              <div class="form__terms">
                 <input
                   type="checkbox"
                   id="terms-checkbox"
                   class="form__checkbox"
                 />
-                <label for="terms-checkbox" class="form form__checkbox-text"
+                <label for="terms-checkbox" class="form form__label_checkbox-text"
                   >I agree with the terms of use</label
                 >
               </div>
@@ -162,7 +162,7 @@
             use biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <div class="menu__cards">
-            <div class="card">
+            <article class="card">
               <h3 class="card__title">Filter</h3>
               <ul class="card__list">
                 <li class="card__list-item">
@@ -185,8 +185,8 @@
                   <span class="card__list-divider"></span>$1.25
                 </li>
               </ul>
-            </div>
-            <div class="card">
+            </article>
+            <article class="card">
               <h3 class="card__title">Espresso</h3>
               <ul class="card__list">
                 <li class="card__list-item">
@@ -205,8 +205,8 @@
                   $10
                 </li>
               </ul>
-            </div>
-            <div class="card">
+            </article>
+            <article class="card">
               <h3 class="card__title">Baked Goods</h3>
               <ul class="card__list">
                 <li class="card__list-item">
@@ -228,7 +228,7 @@
                   Fresh Bug’uette <span class="card__list-divider"></span>$0.25
                 </li>
               </ul>
-            </div>
+            </article>
           </div>
         </section>
         <section class="about" id="contacts">
@@ -262,20 +262,20 @@
             <h3 class="footer__social-heading">Social media</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <img
+                <a class="footer__list-link" href="#">
+                  <img
                   src="./images/facebook_white.svg"
                   alt="facebook logo"
                   class="footer__social-icon"
-                />
-                <p class="footer__list-item-text">Facebook</p>
-              </li>
-              <li class="footer__list-item">
-                <img
+                />Facebook
+                </a>
+                <a class="footer__list-link" href="#">
+                  <img
                   src="./images/instagram_white.svg"
                   alt="instagram logo"
                   class="footer__social-icon"
-                />
-                <p class="footer__list-item-text">Instagram</p>
+                />Instagram
+                </a>
               </li>
             </ul>
           </div>
