project 2 stage 4 submission 3

--- a/index.html
+++ b/index.html
@@ -112,43 +112,39 @@
                 placeholder="Name Surname"
                 required
               />
-              <label for="guests" class="form form__label"
-                >Number of guests *</label
-              >
+              <label for="guests" class="form__label">Number of guests *</label>
               <input
                 id="guests"
                 type="number"
-                class="form form__input"
+                class="form__input"
                 placeholder="1-8"
                 min="1"
                 max="8"
                 required
               />
-              <label for="date" class="form form__label">Date & time *</label>
+              <label for="date" class="form__label">Date & time *</label>
               <input
                 id="date"
                 type="datetime-local"
-                class="form form__input"
+                class="form__input"
                 required
               />
-              <label for="email" class="form form__label">Your email *</label>
+              <label for="email" class="form__label">Your email *</label>
               <input
                 id="email"
                 type="email"
-                class="form form__input"
+                class="form__input"
                 placeholder="email@email.com"
                 required
               />
-              <button type="submit" class="form__button">
-                Book a table
-              </button>
+              <button type="submit" class="form__button">Book a table</button>
               <div class="form__terms">
                 <input
                   type="checkbox"
                   id="terms-checkbox"
                   class="form__checkbox"
                 />
-                <label for="terms-checkbox" class="form form__label_checkbox-text"
+                <label for="terms-checkbox" class="form__checkbox_padding_left"
                   >I agree with the terms of use</label
                 >
               </div>
@@ -264,17 +260,19 @@
               <li class="footer__list-item">
                 <a class="footer__list-link" href="#">
                   <img
-                  src="./images/facebook_white.svg"
-                  alt="facebook logo"
-                  class="footer__social-icon"
-                />Facebook
+                    src="./images/facebook_white.svg"
+                    alt="facebook logo"
+                    class="footer__social-icon"
+                  />Facebook
                 </a>
+              </li>
+              <li class="footer__list-item">
                 <a class="footer__list-link" href="#">
                   <img
-                  src="./images/instagram_white.svg"
-                  alt="instagram logo"
-                  class="footer__social-icon"
-                />Instagram
+                    src="./images/instagram_white.svg"
+                    alt="instagram logo"
+                    class="footer__social-icon"
+                  />Instagram
                 </a>
               </li>
             </ul>
