project 2 stage 4 submission 5

--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
                   id="terms-checkbox"
                   class="form__checkbox"
                 />
-                <label for="terms-checkbox" class="form__checkbox_padding_left"
+                <label
+                  for="terms-checkbox"
+                  class="form__label form__checkbox_padding_left"
                   >I agree with the terms of use</label
                 >
               </div>
