--- a/index.html
+++ b/index.html
@@ -144,9 +144,7 @@
                   id="terms-checkbox"
                   class="form__checkbox"
                 />
-                <label
-                  for="terms-checkbox"
-                  class="form__label form__checkbox_padding_left"
+                <label for="terms-checkbox" class="form__label"
                   >I agree with the terms of use</label
                 >
               </div>
